Fixed missing euro sign issue and fixed Create Look Book Form concerning number input and button wrap

--- a/client/css/create-look-book.css
+++ b/client/css/create-look-book.css
@@ -93,4 +93,14 @@
   .create-look__wrapper {
     max-width: 100%;
   }
+
+  .create-look__box {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
+  .create-look__btn {
+    margin-right: 0;
+    margin-bottom: 1rem;
+  }
 }
